--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
     <div class="body">
         <div class="bio">
-            Jeune et dynamique, j'aimerais me réorienter en web design, ayant toujours été créative. Pour cela, je voudrais faire la formation de Designer Web - Graphiste au sein de votre école afin de développer mes connaissances acquises et d'élargir mon champ de compétences.
+            Jeune et dynamique, j'aimerais me réorienter en web design, ayant toujours été créative et attirée par le design.
+Pour cela, je voudrais faire la formation de Designer Web - Graphiste au sein de votre entreprise afin de developper mes connaissances acquises et d'élargir mon champ de compétences.
         </div>
 
         <div class="carte" id="formations">
@@ -32,13 +33,21 @@
                 <div class="intitule">
                     <div class="cap">
                         <span class="date">
+                            2023-2025
+                        </span> <br>
+                        <span class="diplomes">
+                            Formation Bac+2 Designer Web-Graphiste
+                        </span> 
+                    </div> <br>
+                     <div class="fac">
+                        <span class="date">
                             2021-2022
                         </span> <br>
                         <span class="diplomes">
                             CAP Esthétique Cosmétique Parfumerie 
-                        </span> 
+                        </span>
                     </div> <br>
-                     <div class="fac">
+                    <div class="bac">
                         <span class="date">
                             2019-2020
                         </span> <br>
@@ -46,20 +55,12 @@
                             Préparation aux études scientifiques
                         </span>
                     </div> <br>
-                    <div class="bac">
+                    <div class="bafa">
                         <span class="date">
                             2018-2019
                         </span> <br>
                         <span class="diplomes">
                             BAC Technologique ST2S
-                        </span>
-                    </div> <br>
-                    <div class="bafa">
-                        <span class="date">
-                            2018
-                        </span> <br>
-                        <span class="diplomes">
-                            Diplome du BAFA
                         </span>
                     </div>
                 </div>
@@ -207,7 +208,7 @@
                     home
                 </span>
                 <span class="text">
-                    Bordeaux
+                    Bordeaux et aux alentours
                 </span>
                 
             </div>
