--- a/index.html
+++ b/index.html
@@ -217,6 +217,11 @@ Pour cela, je voudrais faire la formation de Designer Web - Graphiste au sein de
         <a href="https://www.linkedin.com/in/eline-jorland-9596081a2/?originalSubdomain=fr">
             <img class="logo" src="icons/linkedin.png" alt="">
         </a>
+
+        <a href="portfolio/portfolio jorland eline.pdf">
+            <img class="portfolio" src="icons/bouton portfolio valide.png" alt="">
+        </a>
+    
     </footer>
     
 </body>
