affichage tablette et telephone

--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
     <header>
         <h1>Eline Jorland</h1>
         <h2>22 ans</h2>
-
-
-        <img class="pp" src="https://media.licdn.com/dms/image/D5603AQEOsxSaoiC0zg/profile-displayphoto-shrink_200_200/0/1665393712326?e=1688601600&v=beta&t=Nv94iYfH3pq4awwRBUwpOylobeAwkPLF52YuIqJdI_M" alt="">
+        <img class="pp" src="/pp.jpg" alt="">
     </header>
 
     <div class="body">
