changement url portfolio

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ Pour cela, je voudrais faire la formation de Designer Web - Graphiste au sein de
             <img class="logo" src="icons/linkedin.png" alt="">
         </a>
 
-        <a href="portfolio/portfolio jorland eline.pdf">
+        <a href="https://jorlandeline63.myportfolio.com/">
             <img class="portfolio" src="icons/bouton portfolio valide.png" alt="">
         </a>
     
